--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -6,6 +6,8 @@
 <body>
     <!-- This file is used by Netlify to detect the form structure -->
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+        <input type="hidden" name="form-name" value="contact" />
+        <input type="text" name="bot-field" />
         <input type="text" name="name" />
         <input type="email" name="email" />
         <input type="text" name="company" />
