--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!-- This file is used by Netlify to detect the form structure -->
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
         <input type="hidden" name="form-name" value="contact" />
         <input type="text" name="bot-field" />
         <input type="text" name="name" />
