--- a/public/__forms.html
+++ b/public/__forms.html
@@ -1,8 +1,9 @@
 <html>
   <head></head>
   <body>
-    <form name="contact" data-netlify="true" hidden>
+    <form name="contact" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
       <input type="hidden" name="form-name" value="contact" />
+      <input name="bot-field" type="text" />
       <input name="name" type="text" />
       <input name="email" type="email" />
       <input name="company" type="text" />
